# bilibili-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
bilibili/: __init__.py
bilibili/utils/: version.py
tests/utils/: test_version.py
